# BigCodeRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: basic_example.cpp
include/: Circle.h  Scene.h  Shape.h
src/: Circle.cpp  Scene.cpp
